fix problems with table alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,11 +45,11 @@ table.tasks tr.divider {
     text-align: center;
 }
 
-table.tasks tr.divider td.action{
+table.tasks tr.divider div.actions{
     visibility: hidden;
 }
 
-table.tasks tr.divider td.action.action-delete{
+table.tasks tr.divider div.action.action-delete{
     visibility: visible;
 }
 
@@ -58,7 +58,7 @@ table.tasks tr td.name {
 }
 
 table.tasks tr td.name span {
-    display: block;
+    display: inline-block;
     padding: .5em;
 }
 
@@ -69,26 +69,27 @@ table.tasks tr td.name span.finished{
     text-decoration: line-through;
 }
 
-table.tasks tr td.action{
+table.tasks tr div.actions{
     opacity: 0;
     color: #ddd;
-    padding-left: 10px;
+    padding: 10px 0 0 10px;
+    cursor: pointer;
+    float: right;
 }
 
-table.tasks tr.active td.action {
+table.tasks tr.active div.actions {
     opacity:1;
 }
 
-
-table.tasks tr:hover td.action {
+table.tasks tr:hover div.actions {
     opacity: 1;
 }
 
-table.tasks tr:hover td.action:hover {
+table.tasks tr:hover div.action:hover {
     color: #444;
 }
 
-table.tasks tr:hover td.action-delete:hover {
+table.tasks tr:hover div.action-delete:hover {
     color: red;
 }
 
